# kts_async

./: README.md
aiohttp-crm/: pyproject.toml
aiohttp-crm/app/crm/: models.py  schemes.py  views.py
aiohttp-crm/app/store/crm/: accessor.py
aiohttp-crm/app/web/: app.py  config.py  middlewares.py  schemes.py  utils.py
