[tool.poetry]
name = "aiohttp-crm"
version = "0.1.0"
description = ""
authors = ["fozt <dev.grigorii@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
loguru = "^0.6.0"
aiohttp-pydantic = "^1.12.2"
pydantic = {extras = ["dotenv", "email"], version = "^1.10.2"}
jsons = "^1.6.3"

[tool.poetry.dev-dependencies]
mypy = "^0.982"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
